syntax = "proto3";

option go_package="github.com/ProtocolONE/payone-repository/pkg/proto/repository";

import "billing/billing.proto";

package repository;

service Repository {
    rpc UpdateOrder(billing.Order) returns (Result) {}
}

message Result {
    bool has_error = 1;
    string comment = 2;
}



